# Tirmat_Mobile

./: .gitignore  .gitmodules  README.txt
Tirmat_Android/: build.gradle
Tirmat_Android/app/: .gitignore  build.gradle
Tirmat_Android/app/src/main/: AndroidManifest.xml
Tirmat_Android/app/src/main/cpp/: native-lib.cpp
Tirmat_Android/app/src/main/res/layout/: activity_game_level.xml  fragment_game_level.xml
Tirmat_Android/gradle/wrapper/: gradle-wrapper.properties
game_engine/: .gitignore  CMakeLists.txt
game_engine/engine/: EngineTest.cpp  GameInteractor.djinni  MoveManager.cpp  MoveManager.hpp
game_engine/engine/board/: BoardBuild.djinni  BoardElementsFactory.hpp  BoardTest.cpp  GameBoard.cpp  GameBoard.hpp  GameBoardInteractorIntf.hpp  GameBoardIntf.hpp  GameBoardMove.hpp  Types.hpp  UserResources.cpp  UserResources.hpp
game_engine/engine/initialization/: GameBoardFactory.cpp  GameBoardFactory.hpp
game_engine/engine/move/: MoveManager.cpp  MoveManager.hpp  UndoController.cpp  UndoController.hpp
game_engine/engine/resources/: GeneratingRule.hpp  PlayerResources.hpp
game_engine/engine/ruleset/: RuleDFA.cpp  RuleDFA.hpp  RuleManager.hpp  Types.hpp
game_engine/engine/shapeset/: ShapeSetManager.cpp  ShapeSetManager.hpp  ShapeSetTest.cpp
game_engine/engine/state/: GameActionInteractor.cpp  GameActionInteractor.hpp  GameEngineFactory.cpp  GameEngineFactory.hpp  GameInteractor.djinni  GameInteractorBuild.djinni  UserStateContainer.cpp  UserStateContainer.hpp
game_engine/engine/utilities/: Logging.hpp
(+33 files in other folders)
